--- a/Raytracer.cbp
+++ b/Raytracer.cbp
@@ -14,8 +14,13 @@
 				<Compiler>
 					<Add option="-std=c++11" />
 					<Add option="-g" />
-					<Add option="-DSFML_STATIC" />
 				</Compiler>
+				<Linker>
+					<Add library="sfml-graphics-d" />
+					<Add library="sfml-window-d" />
+					<Add library="sfml-system-d" />
+					<Add directory="$(#sfml.lib)" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/Raytracer" prefix_auto="1" extension_auto="1" />
@@ -27,6 +32,10 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="sfml-graphics" />
+					<Add library="sfml-window" />
+					<Add library="sfml-system" />
+					<Add directory="$(#sfml.lib)" />
 				</Linker>
 			</Target>
 		</Build>
@@ -36,34 +45,31 @@
 			<Add directory="$(#sfml.include)" />
 		</Compiler>
 		<Linker>
-			<Add library="sfml-graphics" />
-			<Add library="sfml-window" />
-			<Add library="sfml-system" />
+			<Add library="opengl32" />
 			<Add directory="$(#sfml.lib)" />
-			<Add directory="$(#sfml.bin)" />
 		</Linker>
-		<Unit filename="Camera.h" />
+		<Unit filename="Camera.hpp" />
+		<Unit filename="Line.hpp" />
 		<Unit filename="Raymath.cpp" />
-		<Unit filename="Raymath.h" />
+		<Unit filename="Raymath.hpp" />
 		<Unit filename="Raytracer.cpp" />
-		<Unit filename="Raytracer.h" />
+		<Unit filename="Raytracer.hpp" />
 		<Unit filename="RenderObj.cpp" />
-		<Unit filename="RenderObj.h" />
+		<Unit filename="RenderObj.hpp" />
 		<Unit filename="Renderer.cpp" />
-		<Unit filename="Renderer.h" />
+		<Unit filename="Renderer.hpp" />
 		<Unit filename="Scene.cpp" />
-		<Unit filename="Scene.h" />
+		<Unit filename="Scene.hpp" />
 		<Unit filename="Sphere.cpp" />
-		<Unit filename="Sphere.h" />
+		<Unit filename="Sphere.hpp" />
 		<Unit filename="Triangle.cpp" />
-		<Unit filename="Triangle.h" />
+		<Unit filename="Triangle.hpp" />
 		<Unit filename="Vector.cpp" />
-		<Unit filename="Vector.h" />
+		<Unit filename="Vector.hpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="raytri.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="raytri.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
